# Full-Stack-GenAI

./: .gitattributes  .gitignore  CHECKLIST.md  Course-Syllabus.md  INVENTORY.md  LEARNING_CHECKLIST.md  LEARNING_PROTOCOL.md  Notes.txt  README.md  Study-notes.md  VTT_CHECKLIST.md  index.html  main.py  pyproject.toml  requirements.txt
01-Day-15Mar26/: CHECKLIST.md  Notes.md
02-Day-22Mar26/: CHECKLIST.md  Notes.md
03-Day-28Mar26/: CHECKLIST.md  Notes.md  notes.txt
03-Day-28Mar26/class/: README.md  encoding-embedding.ipynb  pyproject.toml  requirements.txt
04-Day-29Mar26/: CHECKLIST.md  Notes.md
04Apr26/: CHECKLIST.md  Notes.md  encoding.ipynb  session_04Apr26_encoding_embedding_notes.md
05-Day-04Apr26/: CHECKLIST.md  Notes.md
05Apr26/: CHECKLIST.md  Notes.md
06-Day-05Apr26/: CHECKLIST.md  Notes.md  README (2).md
07-Day-09Apr26/: CHECKLIST.md
08-Day-11Apr26/: CHECKLIST-Class-06-11-Apr-Word2vec-with-practical.md  CHECKLIST.md  Notes.md
09-Day-12Apr26/: CHECKLIST.md  Notes.md
09Apr26/: CHECKLIST.md  Notes.md
10-Day-18Apr26/: CHECKLIST.md  Notes.md
11-Day-19Apr26/: CHECKLIST.md  Notes.md
11Apr26/: CHECKLIST-Class-06-11-Apr-Word2vec-with-practical.md  CHECKLIST.md  Notes.md
12-Day-25Ap26/: CHECKLIST.md  Notes.md
12Apr26/: CHECKLIST.md  Notes.md
13-Day-26Apr26/: CHECKLIST.md  Notes.md  README.md  positional-encoding-standalone.html
15Mar26/: CHECKLIST.md  Notes.md
18Apr25/: SOTA-llm-embedding.ipynb
18Apr26/: CHECKLIST.md  Notes.md  SOTA-llm-embedding-mine.ipynb  SOTA-llm-embedding.ipynb
19Apr26/: CHECKLIST.md  Notes.md
22Mar26/: CHECKLIST.md  Notes.md  Notes.txt
25Ap26/: CHECKLIST.md  Notes.md
28Mar26/: CHECKLIST.md  Notes.md
29Mar26/: CHECKLIST.md  (+1 more)
(+13 files in other folders)
