[project]
name = "full-stack-genai-bootcamp-notes"
version = "0.1.0"
description = "Encoding + Word2Vec notebooks (05-Day-04Apr26, 09-Day-12Apr26); use with uv at repo root."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.11.4",
    "scikit-learn>=1.5.2",
    "pandas>=2.1.0",
    "gensim>=4.3.0",
    "nltk>=3.8.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "sentence-transformers>=5.4.1",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.14",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
]
