[project]
name = "class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.19.0",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "mteb>=1.12.5",
    "numpy>=1.26.4",
    "pillow>=10.2.0",
    "rank-bm25==0.2.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.11.4",
    "sentence-transformers==2.7.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.41.0",
]
